[package]
name = "rs-ctypes"
version = "0.1.1"
license = "BSD-3-Clause"
authors = ["Raja Lehtihet <raja.lehtihet@gmail.com>", "Wael El Oraiby <wael.eloraiby@gmail.com>"]
edition = "2018"
description = "simple library for c_types (for use with no_std)"
repository = "https://github.com/NeoCogi/rs-ctypes"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
